@@ -17,6 +17,7 @@ Version 1.0.71 :
 - Fixed a bug that could prevent the drone to be thrown correctly when trying to jump and spawn it at the same time
 - Fixed a bug allowing to use both the Bag and Misc abilities selected at the same time
 - Fixed a bug allowing the player to bypass the internal delay before being able to throw a bomb or mega bomb
+- Fixed a bug that could prevent the player to correctly grab the Golden Feather ability when using it
 - Fixed a crash when a Drone Missile or Beam got destroyed on top of a Conveyor
 - Fixed a crash when releasing the Use Bag ability button at the same frame a bomb or mega bomb hold by the player would explode
 
